--- a/src/scss/_responsive.scss
+++ b/src/scss/_responsive.scss
@@ -31,7 +31,7 @@
     }
 
     .header-container {   
-        // border: 1px solid black;            
+        border: 1px solid gray;            
         padding-top: 7.70rem;       
         margin-left: 6rem;
         margin-right: 6rem;
@@ -56,47 +56,42 @@
 
 
     .subscription {    
-        text-align: initial;
-        width: 72%;
+        text-align: initial;        
         width: calc(min(650px, 72%));        
     }    
    
     
     input[type=email] {
         width: 100%;    
-        padding: 1.84rem 19rem 1.84rem 4.8rem;
-        
-    
-        background-image: url('/assets/icons/email-icon.svg');
-        background-position: 1.7rem 2rem;
-        background-repeat: no-repeat;
-        background-color: $light-plus;      
-
+        padding: 1.84rem 19rem 1.84rem 4.8rem; 
     
         border: 0.5rem solid $dark-80;
         border-radius: 7.7rem;
 
+        background-position: 1.7rem 2rem;
         
-        font-size: 1.16rem;        
-       
+        font-size: 1.16rem; 
         
         &:focus-visible {            
             border: 0.5rem solid $secondary;
         }
-    
-        
     }
     
     input[type=submit] {    
         position: absolute;
         padding: 1.27rem 3.84rem;
         margin: 0.85rem auto 0 -18.3rem;
-        
     
         font-size: 1.46rem;
         font-weight: 700;
-        
-       
+    }
+
+    footer {       
+        padding: 0 6rem 24rem 6rem;                 
+    }
+
+    .counter-container {       
+        margin-top: -3.5rem;         
     }
 
     .time-container {
@@ -108,91 +103,115 @@
             
     }
 
+    .outer-circle {    
+        height: 13.2rem;
+        width: 13.2rem;      
+        background-image: $to-left-plus;      
+        
+    }
+    
+    .inner-circle { 
+        height: 11.8rem;
+        width: 11.8rem;
+        border-radius: inherit; 
+
+        font-size: 2.77rem;
+        letter-spacing: 0.19rem;
+    }
+    
+    // target 'Days' circle only
+    .number-days {
+        letter-spacing: 0.09rem;
+        
+    }
+    
+    .time-label {    
+        margin-top: 1.19rem;
+        font-size: 1.76rem;
+        color: $light;    
+        text-align: center;
+    }
+
     .button-container {
-        margin-top: 3rem;
+        position: absolute;
+        margin-top: 19rem;
+        margin-left: 2rem;
+        // left: clamp(6rem, calc(5vw + 1rem), 22rem);
+
+        .button {  
+            width: 3.07rem;
+            height: 3.07rem;           
+            border-radius: 20%;
+    
+                svg {
+                    width: 2rem;
+                    height: 2rem; 
+                }
+    
+            .border-bg { 
+                top: -0.2rem;
+                bottom: -0.2rem;
+                left: -0.2rem;
+                right: -0.2rem;
+                border-radius: 22%;
+            }
+        }
+    }
+    
+    .social-icons {
+        // border: 1px solid gold;
+        
+        margin-top: 28rem;       
+        left: calc(min(46rem, 40%));
+    }
+    
+    li {       
+        margin-left: 3.15rem;
+
+        svg {                
+            width: 2rem;
+            height: 2rem;               
+        }
+    }
+    
+    .attribution {        
+        left: 70%;
+        top: 28.5rem;
+        font-size: 1rem;        
     }
 }
 
-@include media-xl {
-    
+@include media-xl {    
     body {
         border: 2px solid gold;
     }
 
     .header-container {   
-                  
-        padding-top: 7.70rem;        
+        // border: 1px solid black;
+        
+        padding-top: 7.70rem;
+        padding-bottom: 11rem;        
         margin-left: 10.92rem;
         margin-right: 10.92rem;
 
-        background-image: url(../../assets/hero-img.png);
-        background-position: right 5rem;
-        background-repeat: no-repeat;
-        background-size: max(40%);
-
-           
+        
+        background-position: right 5rem;      
+        background-size: max(39%);
     }
 
-    h1 {
-        // border: 1px solid green;
-        width: 50%;
-        margin-bottom: 2.5rem;
-        font-size: clamp(5.6rem, calc(12vw + 1rem), 7.7rem);
+    h1 {        
         letter-spacing: 0.4rem;
-        // font-size: max(7.761rem);
-        // font-size: 7vw + 1rem;
-
-        .line2 {
-            margin-top: -3.5rem;
-        }
-    }
-
-
-    // .subscription {    
-    //     text-align: initial;
-    //     width: 60%;
-        
-    // }    
-   
+    }    
     
-    input[type=email] {
-        width: 100%;    
+    input[type=email] {           
         padding: 1.84rem 20rem 1.84rem 5.38rem;
-        
-    
-        background-image: url('/assets/icons/email-icon.svg');
-        background-position: 1.7rem 2rem;
-        background-repeat: no-repeat;
-        background-color: $light-plus;      
-
-    
-        border: 0.5rem solid $dark-80;
-        border-radius: 7.7rem;
-
-        
-        font-size: 1.16rem;        
-       
-        
-        &:focus-visible {            
-            border: 0.5rem solid $secondary;
-        }
-    
-        
     }
-    
-    input[type=submit] {    
-        position: absolute;
-        padding: 1.27rem 3.84rem;
-        margin: 0.85rem auto 0 -18.3rem;
-        
-    
-        font-size: 1.46rem;
-        font-weight: 700;
-        
-       
+
+    footer {       
+        padding: 0 10.92rem 24rem 10.92rem;                 
     }
 
     .button-container {
-        margin-top: 3rem;
+        margin-top: 16rem;
     }
 }
