--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -10,14 +10,14 @@
    }
 
 body, html {
-    height: 100%;
+    height: max(100%);
     font-size: 13px;
 }
 
 body {
     border: 1px solid green;
     
-    
+    // height: auto;
     max-width: 1440px;
     min-width: 310px;
     margin: 0 auto;
@@ -42,6 +42,11 @@ h3 {
 
 input[type=submit], li {
     cursor: pointer;
+}
+
+svg * {
+    width: 100%;
+    height: 100%;
 }
 
 @mixin media-sm {
