--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -56,11 +56,12 @@ footer {
     
     font-family: 'Michroma', sans-serif;
     font-size: 1.23rem;
-    letter-spacing: 0.077rem;  
+    letter-spacing: 0.077rem;
     
     color: $dark-minus;
 }
 
+// target 'Days' circle only
 .number-days {
     letter-spacing: 0.054rem;
     
@@ -98,10 +99,10 @@ footer {
         background: $header-bg;
         border-radius: 13%;
 
-            svg * {
-                width: 100%;
-                height: 100%;
-            }
+            // svg * {
+            //     width: 100%;
+            //     height: 100%;
+            // }
 
             svg {
                 
