--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -40,7 +40,7 @@ $to-right-minus: linear-gradient(to right, $primary-minus, $secondary-minus);
 
 $to-left: linear-gradient(to left, $primary, $secondary);
 $to-left-minus: linear-gradient(to left, $primary-minus, $secondary-minus);
-$to-left-plus: linear-gradient(to left, $primary-plus, $secondary-plus);
+$to-left-plus: linear-gradient(to left, $primary, $secondary-plus);
 
 $header-bg: linear-gradient(to bottom right, $light-minus, $light-plus);
 $circle-bg: radial-gradient($light, $light-minus);
