--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,9 +14,8 @@ body, html {
 }
 
 body {
-  border: 1px solid green;
   max-width: 1440px;
-  min-width: 310px;
+  min-width: 300px;
   margin: 0 auto;
   font-weight: 400;
   font-family: 'Poppins', sans-serif;
@@ -46,6 +45,7 @@ svg * {
 header {
   background-image: -webkit-gradient(linear, left top, right bottom, from(#FFF), to(#EDEDED));
   background-image: linear-gradient(to bottom right, #FFF, #EDEDED);
+  height: 63%;
 }
 
 .header-container {
@@ -83,10 +83,10 @@ input {
 
 input[type=email] {
   width: 100%;
-  padding: 0.58rem 2.3rem 0.58rem 3.85rem;
+  padding: 0.77rem 2.3rem 0.77rem 3.85rem;
   margin-bottom: 1.7rem;
   background-image: url("/assets/icons/email-icon.svg");
-  background-position: 1.16rem 0.58rem;
+  background-position: 1.16rem 0.77rem;
   background-repeat: no-repeat;
   background-color: #EDEDED;
   border: 0.3rem solid rgba(41, 41, 41, 0.8);
@@ -116,7 +116,7 @@ input[type=email]:focus-visible {
 }
 
 input[type=submit] {
-  padding: 0.65rem 2.6rem;
+  padding: 0.84rem 2.6rem;
   margin: 0 auto;
   background-image: -webkit-gradient(linear, right top, left top, from(#047CD9), color-stop(20%, #2AA1FE), color-stop(90%, #B50B56));
   background-image: linear-gradient(270deg, #047CD9 0%, #2AA1FE 20%, #B50B56 90%);
@@ -141,7 +141,7 @@ footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 50%;
+  height: 37%;
   width: 100%;
   background: #999999;
   padding: 0 1.93rem 24rem 1.93rem;
@@ -149,14 +149,14 @@ footer {
 
 .counter-container {
   position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   margin-top: -1.077rem;
   margin-bottom: 13.4rem;
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 
 .time-container {
@@ -299,14 +299,15 @@ li:hover svg path {
 .attribution {
   position: relative;
   top: 22rem;
+  margin: 0 auto;
   font-size: 0.7rem;
   color: #EDEDED;
   text-align: center;
 }
 
 @media screen and (min-width: 640px) {
-  body {
-    border: 2px solid red;
+  body, html {
+    height: calc(max(1024px, 100%));
   }
   .header-container {
     margin-left: 3.5rem;
@@ -315,43 +316,49 @@ li:hover svg path {
   h1 {
     font-size: clamp(6rem, calc(12vw + 0.5rem), 7.7rem);
   }
+  .counter-container {
+    margin-top: -2.7rem;
+  }
+  .outer-circle {
+    height: 9.2rem;
+    width: 9.2rem;
+    background-image: -webkit-gradient(linear, right top, left top, from(#dc186e), to(#047CD9));
+    background-image: linear-gradient(to left, #dc186e, #047CD9);
+  }
+  .inner-circle {
+    height: 8.2rem;
+    width: 8.2rem;
+    border-radius: inherit;
+    font-size: 2rem;
+  }
+  .time-label {
+    margin-top: 1.19rem;
+    font-size: 1.5rem;
+  }
+  .button-container {
+    margin-top: 16rem;
+    margin-left: 3.5rem;
+  }
+  .social-icons {
+    margin-top: 22rem;
+  }
+  li {
+    margin-left: 3.15rem;
+  }
+  li svg {
+    width: 2rem;
+    height: 2rem;
+  }
+  .attribution {
+    margin-top: 4rem;
+    font-size: 1rem;
+  }
 }
 
 @media screen and (min-width: 768px) {
-  body {
-    border: 2px dotted black;
-  }
   .header-container {
     margin-left: 5.46rem;
     margin-right: 5.46rem;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  body {
-    border: 1px solid blue;
-  }
-  .header-container {
-    border: 1px solid gray;
-    padding-top: 7.70rem;
-    margin-left: 6rem;
-    margin-right: 6rem;
-    background-image: url(../../assets/hero-img.png);
-    background-position: right 10rem;
-    background-repeat: no-repeat;
-    background-size: 30%;
-  }
-  h1 {
-    width: 50%;
-    margin-bottom: 2.5rem;
-    font-size: clamp(1rem, calc(12vw + 0.5rem), 7.7rem);
-  }
-  h1 .line2 {
-    margin-top: -3.5rem;
-  }
-  .subscription {
-    text-align: initial;
-    width: calc(min(650px, 72%));
   }
   input[type=email] {
     width: 100%;
@@ -371,8 +378,31 @@ li:hover svg path {
     font-size: 1.46rem;
     font-weight: 700;
   }
+}
+
+@media screen and (min-width: 1024px) {
+  .header-container {
+    margin-left: 6rem;
+    margin-right: 6rem;
+    background-image: url(../../assets/hero-img.png);
+    background-position: right 0.5rem;
+    background-repeat: no-repeat;
+    background-size: 38%;
+  }
+  h1 {
+    width: 50%;
+    margin-bottom: 2.5rem;
+    font-size: clamp(1rem, calc(12vw + 0.5rem), 7.7rem);
+  }
+  h1 .line2 {
+    margin-top: -3.5rem;
+  }
+  .subscription {
+    text-align: initial;
+    width: calc(min(650px, 72%));
+  }
   footer {
-    padding: 0 6rem 24rem 6rem;
+    padding: 0 6rem auto 6rem;
   }
   .counter-container {
     margin-top: -3.5rem;
@@ -407,8 +437,8 @@ li:hover svg path {
   }
   .button-container {
     position: absolute;
-    margin-top: 19rem;
-    margin-left: 2rem;
+    margin-top: 17rem;
+    margin-left: 6rem;
   }
   .button-container .button {
     width: 3.07rem;
@@ -427,20 +457,12 @@ li:hover svg path {
     border-radius: 22%;
   }
   .social-icons {
-    margin-top: 28rem;
+    margin-top: 23.8rem;
     left: calc(min(46rem, 40%));
   }
-  li {
-    margin-left: 3.15rem;
-  }
-  li svg {
-    width: 2rem;
-    height: 2rem;
-  }
   .attribution {
-    left: 70%;
-    top: 28.5rem;
-    font-size: 1rem;
+    margin-left: 70%;
+    margin-top: 2.5rem;
   }
 }
 
@@ -463,10 +485,57 @@ li:hover svg path {
     padding: 1.84rem 20rem 1.84rem 5.38rem;
   }
   footer {
-    padding: 0 10.92rem 24rem 10.92rem;
+    padding: 0 10.92rem auto 10.92rem;
   }
   .button-container {
-    margin-top: 16rem;
+    margin-left: 10.92rem;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .header-container {
+    background-position: right 3rem;
+    background-size: 37%;
+  }
+}
+
+@media screen and (max-width: 365px) {
+  h1 {
+    font-size: clamp(4rem, calc(10vw + 0.8rem), 5.6rem);
+  }
+  h1 .line2 {
+    margin-top: -1.6rem;
+  }
+  input[type=email] {
+    font-size: clamp(0.3rem, calc(2.5vw + 0.4rem), 1.077rem);
+    padding-left: 3.2rem;
+    padding-right: 0;
+  }
+  .time-container {
+    margin-left: 0.5rem;
+  }
+}
+
+@media screen and (max-width: 325px) {
+  body, html {
+    height: calc(max(812px, 100%));
+  }
+  .counter-container {
+    position: relative;
+  }
+  .social-icons {
+    margin-top: 70%;
+  }
+  .social-icons li {
+    margin: 0.5rem;
+  }
+  .attribution {
+    position: absolute;
+    margin: 0;
+    top: 95%;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
   }
 }
 /*# sourceMappingURL=main.css.map */
