--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,11 +1,12 @@
 header {
-    background-image: $header-bg;   
-   
+    background-image: $header-bg;
+    height: 63%;    
+    // border: 1px solid darkblue;
 }
 
 .header-container {   
     // border: 1px solid black;
-    // height: 61vh;    
+      
     padding-top: 3.15rem;
     padding-bottom: 7.2rem;
     margin-left: 1.93rem;
@@ -42,11 +43,11 @@ input {
 
 input[type=email] {
     width: 100%;    
-    padding: 0.58rem 2.3rem 0.58rem 3.85rem;
+    padding: 0.77rem 2.3rem 0.77rem 3.85rem;
     margin-bottom: 1.7rem;
 
     background-image: url('/assets/icons/email-icon.svg');
-    background-position: 1.16rem 0.58rem;
+    background-position: 1.16rem 0.77rem;
     background-repeat: no-repeat;
     background-color: $light-plus;
 
@@ -69,7 +70,7 @@ input[type=email] {
 }
 
 input[type=submit] {    
-    padding: 0.65rem 2.6rem;
+    padding: 0.84rem 2.6rem;
     margin: 0 auto;
     background-image: $to-right-double;
     
@@ -98,7 +99,3 @@ input[type=submit] {
         
     }
 }
-
-
-
-
