--- a/src/scss/_responsive.scss
+++ b/src/scss/_responsive.scss
@@ -1,7 +1,11 @@
-@include media-sm {    
-        body {
-           border: 2px solid red;
+@include media-sm { 
+        body, html {
+            height: calc(max(1024px, 100%));
         }
+    
+        // body {
+        //    border: 2px solid red;
+        // }
 
         .header-container {
             margin-left: 3.5rem;
@@ -11,59 +15,69 @@
         h1 {
             font-size: clamp(6rem, calc(12vw + 0.5rem), 7.7rem);
         }
+
+        .counter-container {       
+            margin-top: -2.7rem;         
+        }
+
+        .outer-circle {    
+            height: 9.2rem;
+            width: 9.2rem;      
+            background-image: $to-left-plus;      
+            
+        }
+
+        .inner-circle { 
+            height: 8.2rem;
+            width: 8.2rem;
+            border-radius: inherit; 
+    
+            font-size: 2rem;
+            
+        } 
+        
+        .time-label {    
+            margin-top: 1.19rem;
+            font-size: 1.5rem;            
+        }
+
+        .button-container {
+            margin-top: 16rem;
+            margin-left: 3.5rem;
+        }
+
+        .social-icons {
+            margin-top: 22rem; 
+        }
+        
+        li {       
+            margin-left: 3.15rem;
+    
+            svg {                
+                width: 2rem;
+                height: 2rem;               
+            }
+        }
+        
+        .attribution {
+            margin-top: 4rem;
+            font-size: 1rem;        
+        }
 }
 
 @include media-md {
-     body {
-         border: 2px dotted black;
-     }
+    //  body {
+    //      border: 2px dotted black;
+    //  }
      
      .header-container {
         margin-left: 5.46rem;
         margin-right: 5.46rem;
     }
-}
 
-@include media-lg {
-    
-    body {
-        border: 1px solid blue;
-    }
-
-    .header-container {   
-        border: 1px solid gray;            
-        padding-top: 7.70rem;       
-        margin-left: 6rem;
-        margin-right: 6rem;
-
-        background-image: url(../../assets/hero-img.png);
-        background-position: right 10rem;
-        background-repeat: no-repeat;
-        background-size: max(30%);
-
-           
-    }
-
-    h1 {
-        width: 50%;
-        margin-bottom: 2.5rem;
-        font-size: clamp(1rem, calc(12vw + 0.5rem), 7.7rem);  
-
-        .line2 {
-            margin-top: -3.5rem;
-        }
-    }
-
-
-    .subscription {    
-        text-align: initial;        
-        width: calc(min(650px, 72%));        
-    }    
-   
-    
     input[type=email] {
         width: 100%;    
-        padding: 1.84rem 19rem 1.84rem 4.8rem; 
+        padding: 1.84rem 19rem 1.84rem 4.8rem;         
     
         border: 0.5rem solid $dark-80;
         border-radius: 7.7rem;
@@ -85,9 +99,40 @@
         font-size: 1.46rem;
         font-weight: 700;
     }
+}
+
+@include media-lg {  
+    // body {        
+    //     border: 1px solid blue;
+    // }
+
+    .header-container {      
+        margin-left: 6rem;
+        margin-right: 6rem;
+
+        background-image: url(../../assets/hero-img.png);
+        background-position: right 0.5rem;
+        background-repeat: no-repeat;
+        background-size: max(38%);
+    }
+
+    h1 {        
+        width: 50%;
+        margin-bottom: 2.5rem;
+        font-size: clamp(1rem, calc(12vw + 0.5rem), 7.7rem);  
+
+        .line2 {
+            margin-top: -3.5rem;
+        }
+    }
+
+    .subscription {    
+        text-align: initial;        
+        width: calc(min(650px, 72%));        
+    }
 
     footer {       
-        padding: 0 6rem 24rem 6rem;                 
+        padding: 0 6rem auto 6rem;                 
     }
 
     .counter-container {       
@@ -117,9 +162,8 @@
 
         font-size: 2.77rem;
         letter-spacing: 0.19rem;
-    }
+    }    
     
-    // target 'Days' circle only
     .number-days {
         letter-spacing: 0.09rem;
         
@@ -134,9 +178,8 @@
 
     .button-container {
         position: absolute;
-        margin-top: 19rem;
-        margin-left: 2rem;
-        // left: clamp(6rem, calc(5vw + 1rem), 22rem);
+        margin-top: 17rem;
+        margin-left: 6rem;        
 
         .button {  
             width: 3.07rem;
@@ -158,42 +201,29 @@
         }
     }
     
-    .social-icons {
-        // border: 1px solid gold;
-        
-        margin-top: 28rem;       
+    .social-icons { 
+        margin-top: 23.8rem;       
         left: calc(min(46rem, 40%));
-    }
-    
-    li {       
-        margin-left: 3.15rem;
-
-        svg {                
-            width: 2rem;
-            height: 2rem;               
-        }
-    }
+    } 
     
     .attribution {        
-        left: 70%;
-        top: 28.5rem;
-        font-size: 1rem;        
+        margin-left: 70%;
+        margin-top: 2.5rem;       
     }
 }
 
 @include media-xl {    
     body {
         border: 2px solid gold;
+        // border: none;
     }
 
-    .header-container {   
-        // border: 1px solid black;
+    .header-container { 
         
         padding-top: 7.70rem;
         padding-bottom: 11rem;        
         margin-left: 10.92rem;
         margin-right: 10.92rem;
-
         
         background-position: right 5rem;      
         background-size: max(39%);
@@ -208,10 +238,66 @@
     }
 
     footer {       
-        padding: 0 10.92rem 24rem 10.92rem;                 
+        padding: 0 10.92rem auto 10.92rem;                 
     }
 
-    .button-container {
-        margin-top: 16rem;
+    .button-container {        
+        margin-left: 10.92rem;
+    }
+}
+
+@include media-2xl {
+    .header-container {
+        background-position: right 3rem;
+        background-size: max(37%);
+    }
+}
+
+@include media-2sm {
+
+    h1 {
+        font-size: clamp(4rem, calc(10vw + 0.8rem), 5.6rem);
+
+        .line2 {                      
+            margin-top: -1.6rem;            
+        }
+    }
+
+    input[type=email] {
+        font-size: clamp(0.3rem, calc(2.5vw + 0.4rem), 1.077rem);
+        padding-left: 3.2rem;
+        padding-right: 0;
+    }
+
+    .time-container {
+        margin-left: 0.5rem;       
+            
+    } 
+}
+
+@include media-fallback {
+
+    body, html {
+        height: calc(max(812px, 100%));
+    }
+
+    .counter-container {       
+        position: relative;
+    }
+
+    .social-icons {
+        margin-top: 70%;        
+
+        li {
+            margin: 0.5rem;
+        }
+    }
+
+    .attribution {
+        position: absolute;
+        margin: 0;
+        top: 95%;        
+        left: 50%;
+        transform: translateX(-50%);       
     }
 }
