--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -69,7 +69,7 @@ footer {
     text-align: center;
 }
 
-.button-container {
+.btn-container {    
     position: absolute;
     
     margin-top: 12rem;
@@ -78,7 +78,7 @@ footer {
     
     cursor: pointer; 
 
-    .button {
+    .counter-btn {
         position: relative;
 
         display: flex;       
