--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -15,6 +15,7 @@ $dark-minus: #3B3B3B;
 $dark-minus-60: hsla(0, 0%, 23%, 0.6);
 $dark-minus-85: hsla(0, 0%, 23%, 0.85);
 $dark-minus-50: hsla(0, 0%, 23%, 0.5);
+$dark-minus-20: hsla(0, 0%, 23%, 0.2);
 
 $dark-plus: #121212;
 
