--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -3,7 +3,6 @@
     // display: none;
     // opacity: 0;
     // visibility: hidden;
-
     
     display: flex;
     flex-direction: column;
@@ -15,15 +14,11 @@
 
     width: 100%;
     height: 32.76rem;
-
-    // padding: 2.93rem 1.93rem 4.23rem 1.93rem;
     padding: 0 1.93rem;
 
-    background: $light-plus;
-    // border: 1px solid blue;
+    background: $light-plus;    
     border-radius: 1.54rem 1.54rem 0 0;
     box-shadow: 0 -1.5px 6px 0 rgba(26, 15, 15, 0.2);
-
     transition: opacity .5s ease;
 
     &.active {
@@ -36,8 +31,7 @@
     }
 }
 
-.modal-header {    
-    // border: 1px solid orange;
+.modal-header {   
     height: 10.54rem;
     
     h4 { 
@@ -47,7 +41,7 @@
     }
 
     p {
-        margin-top: 1.39rem;
+        margin-top: 0;
         font-size: 1.23rem;
     }
 }
@@ -56,15 +50,12 @@
     height: 16rem;
     width: 100%;
     position: relative; 
-    top: 0.61rem;
-    
+    top: 0.61rem;    
     
     border-radius: 1.54rem;
-
     background: $light;
 
-    .modal-border {
-        
+    .modal-border {        
         position: absolute;
         content: '';
 
@@ -76,16 +67,14 @@
         background-image: $to-right;
 
         border-radius: 1.64rem;
-        z-index: -1;
-        // border: 1px solid gold;
+        z-index: -1;        
     }
 }
 
 .top-row, .bottom-row {
     width: 19.54rem;
     
-    margin: 0 auto;
-    // border: 1px solid red;
+    margin: 1.3rem auto;    
 }
 
 .bottom-row {
@@ -103,30 +92,25 @@
 }
 
 label, .thedate, .thetime {
-    display: block;
-    // margin-left: calc(min(0.5rem, 2.7rem));
+    display: block;    
           
 }
 
-label {
-    
+label {    
     margin-top: 0.61rem;
     font-size: 1.23rem;
     font-weight: 700;
 }
 
 .thedate, .thetime {
-    background: $light-minus;
-    border: 0.01px solid $dark-minus;
-    border-radius: 0.77rem;
-    
     width: 100%;
-
     margin-top: 0.61rem;
     padding: 0.42rem;
     padding-left: 2.62rem;
 
-    
+    border: 0.01px solid $dark-minus;
+    border-radius: 0.77rem;
+    background: $light-minus;
 }
 
 .thedate {    
@@ -143,9 +127,6 @@ label {
 }
 
 .modal-btn {
-    // grid-area: button;
-    // border: 1px solid red;
-    
     width: 9.62rem;
     height: 2.61rem;
     
@@ -153,15 +134,12 @@ label {
     outline: none;
     border: none;
     background: $dark-minus-20;
-    color: $light-plus;
-    // align-self: baseline;
+    color: $light-plus;   
 }
 
 .modal-footer {
     margin-top: 1.2rem;
     height: 4.22rem;
-    
-    
 
     .btn-container {
         position: relative;
